Ensure Zoom is visible on larger screen sizes

--- a/src/assets/scss/templates/_single-product.scss
+++ b/src/assets/scss/templates/_single-product.scss
@@ -344,4 +344,8 @@
 		}
 	}
 	
+	.pswp__button.pswp__button--zoom {
+		display: block !important; // Ensure Zoom is always visible on larger screens
+	}
+	
 }
